# stele-db

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  docker-compose.yml  justfile  old.md  rust-toolchain.toml  stele.example.toml  typos.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  pr-title.yml  release.yml
brand/: README.md
ci/: JdbcSmoke.java  identity-demo-smoke.sh  jdbc-smoke.sh  psycopg-smoke.py  valid-time-demo-smoke.sh
crates/stele-catalog/: Cargo.toml
crates/stele-catalog/src/: index.rs  lib.rs  schema.rs  versioned.rs
crates/stele-catalog/tests/: versioned_catalog.rs
crates/stele-cli/: Cargo.toml  build.rs
crates/stele-cli/src/: admin.rs  client.rs  highlight.rs  main.rs  pgpass.rs  render.rs  shell.rs  theme.rs
crates/stele-cli/tests/: shell_pty.rs  shell_session.rs
crates/stele-client/: Cargo.toml  README.md
crates/stele-client/src/: lib.rs
crates/stele-client/tests/: live_server.rs  live_server_tls.rs
crates/stele-common/: Cargo.toml
crates/stele-common/src/: datetime.rs  hash.rs  hashkey.rs  lib.rs  metrics.rs  period.rs  provenance.rs  query_stats.rs  row_codec.rs  scram.rs  time.rs  types.rs
crates/stele-engine/: Cargo.toml
crates/stele-engine/src/: backup.rs  catalog_log.rs  commit_log.rs  explain.rs  lib.rs  secondary.rs
crates/stele-engine/tests/: bitemporal_join_oracle.rs  bitemporal_join_range_oracle.rs  bulk_copy.rs  explain.rs  hash_bloom_merge_smoke.rs  index_equivalence_oracle.rs  join_ryow_oracle.rs  projection_predicate_oracle.rs  provenance_oracle.rs  query_stats.rs  range_ryow_oracle.rs  system_range_oracle.rs  valid_range_oracle.rs
crates/stele-exec/: Cargo.toml
crates/stele-exec-oracle/: Cargo.toml
crates/stele-exec-oracle/src/: lib.rs
crates/stele-exec-oracle/tests/: computed_projection_differential.rs  correlated_subquery_differential.rs  cte_differential.rs  duckdb_differential.rs  having_differential.rs  join_composability_differential.rs  sql_path_differential.rs
crates/stele-exec/src/: aggregate.rs  expr.rs  join.rs  lib.rs  operator.rs  period.rs  shape.rs  snapshot_scan.rs
crates/stele-exec/tests/: both_axes_rebuild.rs  both_axes_snapshot_scan.rs  compaction_scan_oracle.rs  duckdb_differential.rs  explode.rs  expr_oracle.rs  filter.rs  join_gather.rs  operator.rs  rg_valid_interval_prune.rs  snapshot_scan.rs  valid_interval_prune.rs  valid_range_scan.rs
crates/stele-lineage/: Cargo.toml
crates/stele-lineage/src/: lib.rs
crates/stele-pgwire/: Cargo.toml
crates/stele-pgwire/src/: binary_format.rs  copy.rs  extended.rs  lib.rs  pg_catalog.rs  scram.rs  text_format.rs  tls.rs
crates/stele-pgwire/tests/: admin_checkpoint_wire.rs  as_of_now_wire.rs  bitemporal_as_of_wire.rs  copy_from_stdin.rs  explain_wire.rs  extended_param_count_wire.rs  merge_wire.rs  predicate_dml_wire.rs  provenance_wire.rs  psql_golden.rs  query_stats_wire.rs  restart_recovery_wire.rs  scram_plus_wire.rs  scram_wire.rs  session_time_wire.rs  timestamptz_wire.rs  tls_wire.rs  tokio_postgres_crud.rs  tokio_postgres_cte.rs  tokio_postgres_group_by.rs  tokio_postgres_join.rs  tokio_postgres_prepared.rs  tokio_postgres_result_shaping.rs  tokio_postgres_select_expressions.rs  tokio_postgres_subquery.rs  tokio_postgres_transactions.rs  tokio_postgres_uuid_bytea.rs  valid_time_ryow_wire.rs  where_predicates_wire.rs
crates/stele-pgwire/tests/common/: mod.rs
crates/stele-pgwire/tests/golden/: psql_types.txt
crates/stele-server/: Cargo.toml  build.rs
crates/stele-server/src/: lib.rs  main.rs  ops.rs  tls.rs
crates/stele-server/src/admin/: grpc.rs  http.rs  mod.rs
crates/stele-server/tests/: admin_api.rs  admin_tls.rs  ops_http.rs
crates/stele-sim/: Cargo.toml
crates/stele-sim/src/: as_of_oracle.rs  chacha.rs  clock.rs  fault_disk.rs  index_build.rs  lib.rs  main.rs  scheduler.rs  si_oracle.rs
crates/stele-sim/tests/: backend_conformance.rs
crates/stele-sql/: Cargo.toml
crates/stele-sql/src/: ast.rs  copy.rs  ddl.rs  dialect.rs  dml.rs  error.rs  fold.rs  lib.rs  merge.rs  parser.rs  select.rs  types.rs
crates/stele-sql/tests/: ddl.rs  parse.rs  types.rs
crates/stele-storage/: Cargo.toml
crates/stele-storage/src/: bloom.rs  checkpoint.rs  checksum.rs  dml.rs  engine.rs  lib.rs  merge.rs  rebuild.rs  systime.rs  validtime.rs
crates/stele-storage/src/backend/: any.rs  conformance.rs  local.rs  memory.rs  mod.rs
crates/stele-storage/src/delta/: marker.rs  mem.rs  mod.rs  spill.rs  version.rs
crates/stele-storage/src/segment/: format.rs  mod.rs  reader.rs  writer.rs  zone_map.rs
crates/stele-storage/src/validity/: index.rs  mod.rs  spill.rs
crates/stele-storage/src/wal/: disk.rs  log.rs  mod.rs  record.rs  replay.rs  segment.rs
crates/stele-storage/tests/: as_of_recovery.rs  backend.rs  bitemporal_oracle.rs  bulk_load.rs  compaction.rs  delta.rs  dml.rs  flush_row_groups.rs  provenance.rs  rebuild.rs  recovery.rs  sealed_immutability.rs  segment.rs  segment_dict.rs  systime.rs  validity_spill_io.rs  validtime.rs  wal.rs  xtier_close.rs  xtier_dml.rs  zone_map.rs
crates/stele-txn/: Cargo.toml
crates/stele-txn/src/: chain.rs  commit_record.rs  lib.rs  manager.rs
docker/: Dockerfile  README.md
docs/: 00-charter.md  01-feature-plan.md  02-architecture.md  03-roadmap.md  04-cicd.md  05-dev-environment.md  06-testing-strategy.md  07-licensing-and-oss.md  08-packaging-distribution-and-releases.md  09-ecosystem-and-products.md  10-security-and-compliance.md  11-operations-and-runbooks.md  12-data-migration-and-interop.md  13-glossary.md  14-performance-and-benchmarking.md  15-commercialization-and-sustainability.md  16-bitemporal-semantics.md  README.md  assumptions.md  hash-key-v1.md  segment-format.md  sql-grammar.md
docs/adr/: 0001-implementation-language-rust.md  0002-on-disk-storage-format.md  0004-licensing-bsl.md  (+32 more)
scripts/: github-setup.sh
(+1 files in other folders)
