[workspace]
resolver = "3"
members = [
    "crates/stele-common",
    "crates/stele-storage",
    "crates/stele-sim",
    "crates/stele-catalog",
    "crates/stele-txn",
    "crates/stele-sql",
    "crates/stele-exec",
    "crates/stele-exec-oracle",
    "crates/stele-engine",
    "crates/stele-pgwire",
    "crates/stele-lineage",
    "crates/stele-server",
    "crates/stele-cli",
]
# `stele-exec-oracle` is a test-only crate whose dev-dep DuckDB compiles the
# bundled C++ amalgamation (minutes). It is deliberately left out of
# `default-members` so a bare `cargo build`/`cargo test` skips it; the per-PR CI
# jobs exclude it explicitly (`--exclude stele-exec-oracle`) and it runs only in
# the nightly gate (`-p stele-exec-oracle`) — STL-158.
default-members = [
    "crates/stele-common",
    "crates/stele-storage",
    "crates/stele-sim",
    "crates/stele-catalog",
    "crates/stele-txn",
    "crates/stele-sql",
    "crates/stele-exec",
    "crates/stele-engine",
    "crates/stele-pgwire",
    "crates/stele-lineage",
    "crates/stele-server",
    "crates/stele-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.89.0"
license = "BUSL-1.1"
repository = "https://github.com/fricker-studios/stele-db"
homepage = "https://steledb.com"
authors = ["Stele DB contributors"]

[workspace.dependencies]
# Internal crates — referenced by path so workspace builds are hermetic.
stele-common   = { path = "crates/stele-common",   version = "0.3.0" }
stele-storage  = { path = "crates/stele-storage",  version = "0.3.0" }
stele-sim      = { path = "crates/stele-sim",      version = "0.3.0" }
stele-catalog  = { path = "crates/stele-catalog",  version = "0.3.0" }
stele-txn      = { path = "crates/stele-txn",      version = "0.3.0" }
stele-sql      = { path = "crates/stele-sql",      version = "0.3.0" }
stele-exec     = { path = "crates/stele-exec",     version = "0.3.0" }
stele-engine   = { path = "crates/stele-engine",   version = "0.3.0" }
stele-pgwire   = { path = "crates/stele-pgwire",   version = "0.3.0" }
stele-lineage  = { path = "crates/stele-lineage",  version = "0.3.0" }
stele-server   = { path = "crates/stele-server",   version = "0.3.0" }

# Pinned third-party deps. Keep this list short on purpose — each addition is a
# supply-chain surface and a `cargo-deny` decision.
anyhow             = "1.0"
bytes              = "1.7"
clap               = { version = "4.5", features = ["derive"] }
serde              = { version = "1.0", features = ["derive"] }
# `recursive-protection` (a default feature) pulls `stacker` → a build-dep and
# extra supply-chain surface we don't need; we drop it and keep just `std`.
sqlparser          = { version = "0.62", default-features = false, features = ["std"] }
# Line editing for `stele shell` (STL-198): ↑/↓ history, Emacs keys, ⌃L. MIT;
# default features off — no fuzzy matcher, no dirs probe. `with-file-history`
# (STL-221) gives cross-process history locking + append-on-exit via the
# `file_lock` std API (stable in Rust 1.89, our MSRV) and a native 0600 file mode;
# the feature pulls **no new crates** — it only activates rustyline's own `log` +
# `nix` code already in the tree. CLI-only: never a dependency of the server or
# the runtime-agnostic core.
rustyline          = { version = "18.0", default-features = false, features = ["with-file-history"] }
# Terminal display width (CJK/emoji are 2 columns) for the shell's table
# alignment. Already in the tree as rustyline's own width dep — zero new surface.
unicode-width      = "0.2"
thiserror          = "2.0"
toml               = "1.1"
# OS entropy for SCRAM salts and SASL nonces (STL-252). The SCRAM math itself is
# vendored (stele_common::scram, like the SHA-256 it builds on); entropy is the
# one piece that cannot be, and `getrandom` is the ecosystem's narrow,
# cross-platform answer — already in the tree transitively via rand/ring.
# `std` carries the io::Error conversion the failure path surfaces through.
getrandom          = { version = "0.3", features = ["std"] }
tokio              = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
# TLS on pg-wire (STL-251). `ring` instead of the default `aws-lc-rs` provider:
# ring is already in the dependency tree, builds clean on every CI target
# (including the Windows check leg — aws-lc-sys wants cmake/nasm there), and
# rustls ships only modern, safe cipher suites either way (docs/10 §6).
rustls             = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
# PEM loading for cert/key/CA files (`CertificateDer::pem_file_iter` & co. —
# the `std` feature carries the PEM/file APIs).
rustls-pki-types   = { version = "1.14", features = ["std"] }
# Dev-only: self-signed CA/server/client certificates generated at test time for
# the TLS handshake + mTLS tests. Never a dependency of a shipped binary.
rcgen              = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }
# Dev-only: a real Postgres client driving the pgwire front end end-to-end in an
# integration test (STL-147 DoD). Never a runtime dependency of a shipped crate.
tokio-postgres     = "0.7"
# Dev-only: the second, independent bitemporal correctness oracle (STL-144). The
# `bundled` feature vendors and compiles the DuckDB C++ amalgamation (MIT), so the
# test needs no system library. Default features are empty (no polars/extensions),
# but `duckdb` depends on `arrow` non-optionally — there is no feature to opt out —
# so the dev-tree pulls the arrow stack regardless (all MIT/Apache-2.0; cargo-deny
# green, see deny.toml). Pinned to 1.4.x — its MSRV (1.84.1) clears our 1.89
# toolchain. Wired only into the test-only `stele-exec-oracle` crate's dev-deps; it
# never links into any shipped crate or the runtime-agnostic storage/txn core
# ([ADR-0010]). That crate is held off the per-PR CI path so this multi-minute
# amalgamation compile runs only in the nightly gate (STL-158).
duckdb             = { version = "1.4", features = ["bundled"] }
tracing            = "0.1"
# `json` enables the line-delimited JSON formatter for production
# (`STELE_LOG_FORMAT=json`, STL-107); it pulls in `serde_json` + `tracing-serde`.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[workspace.lints.rust]
unsafe_code     = "warn"
missing_docs    = "allow"  # flip to "warn" once the public APIs settle
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Mirrors the spirit of CI's `clippy -- -D warnings` but expressed as lint groups so
# individual crates can downgrade specific lints with a localized #[allow].
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
# These are too noisy at scaffold-time; reconsider per-crate as code lands.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
# Proper nouns (FoundationDB, TigerBeetle, BSL, ADR) trip this constantly.
# Tracked: tighten in a follow-up once doc style guide lands.
doc_markdown            = "allow"
# Internal modules and one-letter buffer locals are fine in scaffolds.
items_after_statements  = "allow"
similar_names           = "allow"
# `or_else(|_| EnvFilter::new(...))` is more readable than the suggested closure.
or_fun_call             = "allow"
# tokio::select!'s generated `pub(crate)` items trip this nursery lint.
redundant_pub_crate     = "allow"

[profile.release]
lto        = "thin"
codegen-units = 1
debug      = "line-tables-only"
strip      = "symbols"
panic      = "abort"

[profile.dev]
# Dev builds favor turn-around time; the release profile owns optimization.
debug = "limited"
