[package]
name        = "stele-cli"
description = "The `stele` CLI — interactive shell, one-shot queries, admin subcommands."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "stele"
path = "src/main.rs"

[dependencies]
stele-server = { workspace = true }
stele-common = { workspace = true }
# `stele restore` (STL-249) materializes a data dir from a backup and validates
# it through normal recovery — the engine's restore helper + `recover`, over a
# local disk. Both are already in the graph via stele-server, so this adds no new
# external dependency.
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tokio        = { workspace = true }
rustyline     = { workspace = true }
unicode-width = { workspace = true }
# The admin / control-plane shell tier (STL-200) speaks the HTTP/JSON admin
# gateway (STL-254) over a tiny hand-rolled blocking client; serde[_json] decode
# its replies. Both are already in the workspace graph (stele-server's gateway
# uses them), so this adds no new external dependency.
serde        = { workspace = true }
serde_json   = { workspace = true }
# `stele shell --tls` (STL-251): the same rustls the server stack uses, driven
# through its blocking `StreamOwned` adapter — still no async client crate.
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
# The scripted-shell integration test boots an in-process engine + pgwire
# server on an ephemeral port, then drives the real `stele` binary against it.
stele-pgwire  = { workspace = true }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Self-signed certs for the TLS shell-session tests (STL-251).
rcgen         = { workspace = true }

# The interactive shell only engages the rustyline editor when stdin AND stdout
# are TTYs, so the paste-handling regression test (STL-306) drives the real binary
# over a pseudo-terminal. `nix`'s `term` feature (which carries `openpty`) is
# already enabled in the graph by rustyline, so this adds no new compilation; it
# is unix-only because PTYs are.
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31", features = ["term"] }
