[package]
name        = "stele-cli"
description = "The `stele` CLI — interactive shell, one-shot queries, admin subcommands."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "stele"
path = "src/main.rs"

[dependencies]
stele-server = { workspace = true }
stele-common = { workspace = true }
# `stele restore` (STL-249) materializes a data dir from a backup and validates
# it through normal recovery — the engine's restore helper + `recover`, over a
# local disk. Both are already in the graph via stele-server, so this adds no new
# external dependency.
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
# The admin / control-plane shell tier (STL-200) now rides the published
# `stele-client` SDK (STL-254 gateway, STL-255 crate) instead of a hand-rolled
# HTTP/JSON client — the dogfood for the crate the CLI, Studio, and the operator
# share. serde[_json] move with it into that crate, so the CLI no longer needs
# its own copies.
stele-client = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tokio        = { workspace = true }
rustyline     = { workspace = true }
unicode-width = { workspace = true }
# `stele shell --tls` (STL-251): the same rustls the server stack uses, driven
# through its blocking `StreamOwned` adapter — still no async client crate.
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
# The scripted-shell integration test boots an in-process engine + pgwire
# server on an ephemeral port, then drives the real `stele` binary against it.
stele-pgwire  = { workspace = true }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Self-signed certs for the TLS shell-session tests (STL-251).
rcgen         = { workspace = true }

# The interactive shell only engages the rustyline editor when stdin AND stdout
# are TTYs, so the paste-handling regression test (STL-306) drives the real binary
# over a pseudo-terminal. `nix`'s `term` feature (which carries `openpty`) is
# already enabled in the graph by rustyline, so this adds no new compilation; it
# is unix-only because PTYs are.
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31", features = ["term"] }
