[package]
name        = "stele-cli"
description = "The `stele` CLI — interactive shell, one-shot queries, admin subcommands."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "stele"
path = "src/main.rs"

[dependencies]
stele-server = { workspace = true }
stele-common = { workspace = true }
# `stele restore` (STL-249) materializes a data dir from a backup and validates
# it through normal recovery — the engine's restore helper + `recover`, over a
# local disk. Both are already in the graph via stele-server, so this adds no new
# external dependency.
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
# The admin / control-plane shell tier (STL-200) now rides the published
# `stele-client` SDK (STL-254 gateway, STL-255 crate) instead of a hand-rolled
# HTTP/JSON client — the dogfood for the crate the CLI, Studio, and the operator
# share. serde[_json] move with it into that crate, so the CLI no longer needs
# its own copies.
stele-client = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tokio        = { workspace = true }
rustyline     = { workspace = true }
unicode-width = { workspace = true }
# `stele shell`'s client-side SCRAM-SHA-256 (STL-296) draws a fresh client nonce
# per exchange from the same OS entropy the server's SASL path uses. `getrandom`
# is the auth path's blessed RNG (already in the tree via stele-pgwire/common), so
# this adds no new supply-chain surface.
getrandom    = { workspace = true }
# `stele shell --tls` (STL-251): the same rustls the server stack uses, driven
# through its blocking `StreamOwned` adapter — still no async client crate.
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
# Client-side SCRAM-SHA-256-PLUS channel binding (STL-334) selects the RFC 5929
# `tls-server-end-point` hash from the negotiated leaf certificate's signature
# algorithm, exactly as the server's `stele-pgwire::tls` does. `x509-parser` is
# already compiled into the binary (via stele-server → stele-pgwire), so naming
# it here adds no new supply-chain surface.
x509-parser      = { workspace = true }

# The interactive no-echo password prompt (STL-296) toggles the terminal's ECHO
# flag off via `nix`'s `term` (termios) feature, the true-no-echo recipe psql and
# sudo use. `nix` is already compiled into the binary (rustyline pulls it on unix)
# and its `term` feature is the same one the PTY tests below use for `openpty`, so
# this adds no new compilation. Unix-only because termios is; on other platforms
# the prompt is unavailable and PGPASSWORD is the path.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term"] }

# The Windows half of the no-echo password prompt (STL-335) clears the console
# input handle's `ENABLE_ECHO_INPUT` bit via `windows-sys`'s console API — the
# echo-suppression recipe Windows password prompts use, the cross-platform mate
# of the `nix` termios path above. `windows-sys` is already compiled into the
# binary many times over (tokio, mio, rustls, … all pull it), so naming it for
# this target adds no new supply-chain surface; the auth path takes no new
# external dependency.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
# The scripted-shell integration test boots an in-process engine + pgwire
# server on an ephemeral port, then drives the real `stele` binary against it.
stele-pgwire  = { workspace = true }
# A SCRAM-enabled in-process server for the auth shell-session test (STL-296)
# creates its users through the real SQL path — `CREATE USER … PASSWORD …` parsed
# by `stele-sql` and run on the engine, exactly as the pgwire SCRAM tests do.
stele-sql     = { workspace = true }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Self-signed certs for the TLS shell-session tests (STL-251).
rcgen         = { workspace = true }
