[package]
name        = "stele-engine"
description = "The server-session engine — owns the Catalog, commit clock, and per-table storage tiers across a connection."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-common  = { workspace = true }
stele-storage = { workspace = true }
stele-catalog = { workspace = true }
stele-sql     = { workspace = true }
stele-exec    = { workspace = true }
thiserror     = { workspace = true }
