[package]
name        = "stele-exec"
description = "Vectorized executor — Arrow-shaped batches, pull/push hybrid."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-storage = { workspace = true }
stele-txn     = { workspace = true }
stele-common  = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
# The DuckDB differential oracle (STL-144): a second, independent bitemporal
# `AS OF` implementation the executor is diffed against. Dev-only — never linked
# into the shipped storage/txn core ([ADR-0010]).
duckdb = { workspace = true }
