[package]
name        = "stele-lineage"
description = "Inline provenance — who/what/when wrote each version. Captured at commit."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-txn    = { workspace = true }
stele-common = { workspace = true }
