[package]
name        = "stele-pgwire"
description = "Postgres wire-protocol front end — startup handshake + simple query loop."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-sql     = { workspace = true }
stele-exec    = { workspace = true }
stele-common  = { workspace = true }
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
stele-catalog = { workspace = true }
bytes         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt"] }
