[package]
name        = "stele-pgwire"
description = "Postgres wire-protocol front end — startup handshake + simple query loop."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-sql     = { workspace = true }
stele-exec    = { workspace = true }
stele-common  = { workspace = true }
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
stele-catalog = { workspace = true }
bytes         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
# TLS on the startup path (STL-251): rustls acceptor + the async stream wrapper.
rustls           = { workspace = true }
tokio-rustls     = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true }
# Self-signed CA / server / client certs minted per test (STL-251).
rcgen = { workspace = true }
