[package]
name        = "stele-pgwire"
description = "Postgres wire-protocol front end — startup handshake + simple query loop."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-sql     = { workspace = true }
stele-exec    = { workspace = true }
stele-common  = { workspace = true }
stele-engine  = { workspace = true }
stele-storage = { workspace = true }
stele-catalog = { workspace = true }
bytes         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
# TLS on the startup path (STL-251): rustls acceptor + the async stream wrapper.
rustls           = { workspace = true }
tokio-rustls     = { workspace = true }
rustls-pki-types = { workspace = true }
# Self-signed certificate generation for the non-dev no-TLS fallback (STL-304):
# rather than refuse to boot, the daemon mints an ephemeral cert so the listener
# is encrypted. Also mints the per-test PKI in tests/tls_wire.rs (STL-251).
rcgen            = { workspace = true }
# Parse the verified mTLS client certificate's subject CN / SANs into the session
# write principal (STL-291) — rustls verifies the chain, this names the peer.
x509-parser      = { workspace = true }
# Fresh per-connection SASL server nonces (STL-252).
getrandom        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true }
# COPY end-to-end test only (STL-236): feed the `tokio-postgres` copy-in sink.
# Both are already in the dependency tree transitively (via tokio / tokio-postgres)
# and ship in no published artifact — dev-deps only, workspace-pinned.
bytes = { workspace = true }
futures-util = { workspace = true }
