[package]
name        = "stele-server"
description = "The stele engine daemon — wires pgwire / lineage into a runnable process."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "stele-server"
path = "src/main.rs"

[dependencies]
stele-pgwire       = { workspace = true }
stele-lineage      = { workspace = true }
stele-engine       = { workspace = true }
stele-storage      = { workspace = true }
stele-common       = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# The ops-endpoint integration tests drive real wire load through the server
# (STL-253): tokio-postgres as the SQL client, stele-sql for the `Statement`
# type a delegating test session needs in its `SessionHandle` signatures.
stele-sql      = { workspace = true }
tokio-postgres = { workspace = true }
