[package]
name        = "stele-sim"
description = "Deterministic simulation harness — virtual clock, disk, network, and scheduler."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "stele-sim"
path = "src/main.rs"

[dependencies]
stele-storage = { workspace = true }
stele-common  = { workspace = true }
stele-txn     = { workspace = true }
stele-exec    = { workspace = true }
stele-sql     = { workspace = true }
stele-catalog = { workspace = true }
clap          = { workspace = true }
